--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/traverse": "^7.12.13",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "uglifyjs-webpack-plugin": "^2.2.0"
   },
   "devDependencies": {
     "babel-loader": "^8.2.2",
