--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
     "@babel/traverse": "^7.12.13",
+    "autoprefixer": "^10.2.4",
+    "css-loader": "^5.0.2",
+    "postcss-loader": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "style-loader": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0"
   },
   "devDependencies": {
