--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^10.2.4",
     "css-loader": "^5.0.2",
     "postcss-loader": "^5.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "style-loader": "^2.0.0",
