--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "style-loader": "^2.0.0",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "babel-loader": "^8.2.2",
